swapping object tag for svg

--- a/wasm/index.html
+++ b/wasm/index.html
@@ -22,7 +22,7 @@
 
       <!-- Logo -->
       <div id="imgLoader" style="display: none;">
-        <object id="logo-animated" type="image/png" data="assets/css/images/baby-groot.svg">
+        <object id="logo-animated" type="image/svg+xml" data="assets/css/images/baby-groot.svg">
           <img src="https://github.com/will-rowe/groot/raw/master/paper/img/misc/groot-logo.png" alt="logo">
         </object>
       </div>
