--- a/wasm/index.html
+++ b/wasm/index.html
@@ -12,7 +12,7 @@
   <div id="wrapper"></div>
 
   <div class="overlay">
-      <object id="honeycomb" type="image/png" data="assets/css/images/overlay.svg"><img src="https://github.com/will-rowe/groot/raw/master/paper/img/misc/groot-logo.png" alt="honeycomb"></object>
+      <object id="honeycomb" type="image/svg+xml" data="assets/css/images/overlay.svg"><img src="https://github.com/will-rowe/groot/raw/master/paper/img/misc/groot-logo.png" alt="honeycomb"></object>
   </div>
 
   <div id="main">
@@ -48,6 +48,10 @@
           <h2>Select Files</h2>
           <sub>note: no files are actually sent anywhere!</sub>
           <hr/>
+          <!-- INDEX -->
+          <button id="indexGetter"><span>1. download the index</span></button>
+          <button id="indexLoader"><span>2. load the index</span></button>
+
           <!-- FASTQ -->
           <div class="file-upload" id="fastqSelecter">
             <div class="file-select">
@@ -56,17 +60,9 @@
               <input type="file" name="uploader1[]" id="uploader1" multiple="multiple"/>
             </div>
           </div>
-          <!-- INDEX -->
-          <div class="file-upload" id="indexSelecter">
-              <div class="file-select">
-                <div class="file-select-button" id="indexFileName">select INDEX file</div>
-                <div class="file-select-name" id="noIndexFile">no file selected...</div> 
-                <input type="file" name="uploader2" id="uploader2"/>
-              </div>
-            </div>
           <div id="filedrag">or drop FASTQ files here...</div>
           <hr/>
-          <button id="setInput"><span>done!</span></button>
+          <button id="inputCheck"><span>confirm!</span></button>
         </div>
       </div>
 
@@ -138,7 +134,7 @@
         </div>
       </div>
     </div>
-    
+
     <!-- Footer -->
     <div class="footer">
       <a class="fa fa-power-off" id="close"></a>
@@ -161,7 +157,7 @@
       document.body.classList.remove("pageMask");
       document.getElementById("imgLoader").style.display = "block";
       if (window.File && window.FileList && window.FileReader) {
-        Init();
+        initInputFiles();
       } else {
         statusUpdate('status', 'please get a more recent browser!');
       }
@@ -196,9 +192,15 @@
     }
   </script>
 
-  <!--- JS for drag and drop --->
+  <!--- JS for input files --->
   <script>
-    function Init() {
+    function initInputFiles() {
+      // listen out for index getter
+      document.getElementById("indexGetter").addEventListener('click', function() {
+        var url = "https://cdn.jsdelivr.net/gh/will-rowe/baby-groot/wasm/groot-files/groot.index";
+        getIndex(url);
+      });
+      // set up the FASTQ input
       var uploader1 = $id("uploader1"), filedrag = $id("filedrag");
       uploader1.addEventListener("change", FileSelectHandler, false);
       var xhr = new XMLHttpRequest();
@@ -223,12 +225,6 @@
           var files = e.target.files || e.dataTransfer.files;
           // process all FASTQ objects TODO: need to handle multiple files!!!
           for (var i = 0, f; f = files[i]; i++) {
-            let reader = new FileReader();
-            reader.onload = (ev) => {
-                    bytes = new Uint8Array(ev.target.result);
-                    initMem1(bytes.length);
-            };
-            reader.readAsArrayBuffer(f);
             // add filename to the selector bar
             var filename = f.name;
             if (/^\s*$/.test(filename)) {
@@ -239,9 +235,24 @@
               $("#fastqSelecter").addClass('active');
               $("#noFile").text(filename.replace("C:\\fakepath\\", "") + ","); 
             }
+            // add the file to the stream queue
+
+
+            //loadFASTQfiles(f);
+            
           }
     }
   </script>
+
+
+<script>
+  /*
+
+
+*/
+</script>
+
+
 
   <!--- JS for WASM --->
   <script type="text/javascript">
@@ -259,16 +270,6 @@
     async function run() {
             await go.run(inst);
     }
-
-    // listen out for an index file upload
-    document.getElementById("uploader2").addEventListener('change', function() {
-            let reader = new FileReader();
-            reader.onload = (ev) => {
-                    bytes = new Uint8Array(ev.target.result);
-                    initMem2(bytes.length);
-            };
-            reader.readAsArrayBuffer(this.files[0]);
-    });
   </script>
 
   <!--- JS for Google --->
