--- a/wasm/index.html
+++ b/wasm/index.html
@@ -136,26 +136,41 @@
   <!--- External JS --->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js" type="text/javascript"></script>
   <script async="" src="https://www.googletagmanager.com/gtag/js?id=UA-90659329-2" type="text/javascript"></script>
-  <script src="assets/js/wasm_loader.js" type="text/javascript"></script>
+  <script src="assets/js/wasm_exec.js" type="text/javascript"></script>
   <script src="assets/js/utils.js" type="text/javascript"></script>
   
+  <!--- JS for WASM --->
+  <script type="text/javascript">
+    if (WebAssembly) {
+                 // WebAssembly.instantiateStreaming is not currently available in Safari
+                 if (WebAssembly && !WebAssembly.instantiateStreaming) { // polyfill
+                     WebAssembly.instantiateStreaming = async (resp, importObject) => {
+                        const source = await (await resp).arrayBuffer();
+                         return await WebAssembly.instantiate(source, importObject);
+                     };
+                 }  
+                 const go = new Go();
+                 WebAssembly.instantiateStreaming(fetch("baby-groot.wasm"), go.importObject).then((result) => {
+                    go.run(result.instance);
+                    console.log("WebAssembly loaded, now getting GROOT's files ready")
+                    initInputFiles();
+                    getGraphs("assets/groot-files/dummy-db/groot.gg");
+                    getLSHforest("assets/groot-files/dummy-db/groot.lshf");
+                    statusUpdate('status', 'GROOT is ready!');
+                 });
+            } else {
+               console.log("WebAssembly is not supported in this browser")
+               statusUpdate('status', 'please get a more recent browser!');
+            }
+  </script>
+
   <!--- JS page prep --->
   <script type="text/javascript">
     window.ontouchmove = function() {return false;}
     window.onorientationchange = function() {document.body.scrollTop = 0;}
     window.onload = function() {
-      if (window.File && window.FileList && window.FileReader) {
-        initInputFiles();
-      } else {
-        statusUpdate('status', 'please get a more recent browser!');
-      }
-
-      getGraphs("assets/groot-files/dummy-db/groot.gg");
-      getLSHforest("assets/groot-files/dummy-db/groot.lshf");
-
       // turn the spinner off
       document.getElementById("spinner").setAttribute('hidden', '');
-
     }
 
     // listen out for index selection -- TODO: I don't think this isn't listening to the right selecter
@@ -163,42 +178,18 @@
     //  var selectedIndex = document.getElementById("indexSelecter").selectedOptions;
     //  getIndex(selectedIndex[0].value);
     //});
-
+    
     // listen out for input checker
     document.getElementById("inputChecker").addEventListener('click', function() {
       toggleDiv("inputModal");
       document.getElementById("spinner").removeAttribute('hidden');
       setTimeout( 
-        function (){  
+        function (){ 
           inputCheck();
         }, 10);
     });
   </script>
 
-
-  <!--- JS for WASM --->
-  <script type="text/javascript">
-
-    const go = new Go();
-    
-    // memoryBytes is an Uint8Array pointing to the webassembly linear memory
-    let memoryBytes;
-    let graphBytes, lshfBytes;
-    let mod, inst, bytes;
-
-		WebAssembly.instantiateStreaming(
-			fetch("baby-groot.wasm", {cache: 'no-cache'}), go.importObject).then((result) => {
-			mod = result.module;
-			inst = result.instance;
-			memoryBytes = new Uint8Array(inst.exports.mem.buffer)
-      statusUpdate('status', 'GROOT is ready!');
-			run();
-		});
-		async function run() {
-			await go.run(inst);
-		}
-
-  </script>
 
   <!--- JS for modals --->
   <script type="text/javascript">
@@ -283,7 +274,7 @@
           }
 
           // get the FASTQ streamer ready
-          loadFileList(fastqList);
+          getFiles(fastqList);
     }
   </script>
 
