--- a/wasm/index.html
+++ b/wasm/index.html
@@ -1,301 +1,189 @@
 <!DOCTYPE HTML>
 
 <html>
+
 <head>
-  <title>Baby GROOT</title>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-  <link rel="stylesheet" href="assets/css/main.css" type="text/css">
+    <title>Baby GROOT</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+    <link rel="stylesheet" href="assets/css/main.css" type="text/css">
 </head>
 
 <body>
-  <div id="wrapper"></div>
-  <div id="spinner"></div>
-  <div class="overlay">
-      <object id="honeycomb" type="image/svg+xml" data="assets/images/overlay.svg">
-        <img src="https://github.com/will-rowe/groot/raw/master/paper/img/misc/groot-logo.png" alt="honeycomb">
-      </object>
-  </div>
+    <div id="wrapper"></div>
+    <div id="spinner"></div>
+    <div class="overlay">
+        <object id="honeycomb" type="image/svg+xml" data="assets/images/overlay.svg">
+      <img src="https://github.com/will-rowe/groot/raw/master/paper/img/misc/groot-logo.png" alt="honeycomb">
+    </object>
+    </div>
 
-  <div id="main">
+    <div id="main">
 
-    <!-- Header -->
-    <div class="header" id="header">
+        <!-- Header -->
+        <div class="header" id="header">
 
-      <!-- Logo -->
-      <object id="logo-animated" type="image/svg+xml" data="assets/images/baby-groot.svg">
+            <!-- Logo -->
+            <object id="logo-animated" type="image/svg+xml" data="assets/images/baby-groot.svg">
         <img src="https://github.com/will-rowe/groot/raw/master/paper/img/misc/groot-logo.png" alt="logo">
       </object>
 
-      <!-- Status bar -->
-      <div id="status">
-        <p>starting GROOT...</p>
-      </div>
-      
-      <!-- Buttons -->
-      <div class="nav">
-        <ul>
-          <li><a id="inputIcon" class="fa fa-folder modal-button" href="#inputModal"></a></li>
-          <li><a id="paramIcon" class="fa fa-sliders-h modal-button" href="#parametersModal"></a></li>
-          <li><a id="startIcon" class="fa fa-play"></a></li>
-        </ul>
-      </div>
- 
-      <!-- Input modal -->
-      <div id="inputModal" class="modal">
-        <div class="modal-content">
-          <span class="close-modal">&#215;</span>
-          <h2>Select Files</h2>
-          <sub>note: no files are actually sent anywhere!</sub>
-          <hr/>
-          <!-- FASTQ -->
-          <p>1. select FASTQ files:</p>
-          <div class="file-upload" id="fastqSelecter">
-            <div class="file-select">
-              <div class="file-select-button" id="fastqFileName">select FASTQ file</div>
-              <div class="file-select-name" id="noFile">no file selected...</div> 
-              <input type="file" name="uploader1[]" id="uploader1" multiple="multiple"/>
+            <!-- Status bar -->
+            <div id="status">
+                <p>starting GROOT...</p>
             </div>
-          </div>
-          <div id="filedrag">or drop FASTQ files here...</div>
-          <!-- INDEX -->
-          <p>2. select an index:</p>
-          <select class="select-css" id="indexSelecter">
-              <option value = "groot-files/groot.index" selected>ARG-ANNOT (default)</option>
-              <option value = "index 2" disabled>index 2</option>
-              <option value = "index3" disabled>index 3</option>
+            <div id="progress-container">
+                <div id="progress-bar"></div>
+            </div>
+
+            <!-- Buttons -->
+            <div class="nav">
+                <ul>
+                    <li>
+                        <a id="inputIcon" class="fa fa-folder modal-button" href="#inputModal"></a>
+                    </li>
+                    <li>
+                        <a id="paramIcon" class="fa fa-sliders-h modal-button" href="#parametersModal"></a>
+                    </li>
+                    <li>
+                        <a id="startIcon" class="fa fa-play"></a>
+                    </li>
+                </ul>
+            </div>
+
+
+
+            <!-- Input modal -->
+            <div id="inputModal" class="modal">
+                <div class="modal-content">
+                    <span class="close-modal">&#215;</span>
+                    <h2>Select Files</h2>
+                    <sub>note: no files are actually sent anywhere!</sub>
+                    <hr />
+                    <!-- FASTQ -->
+                    <p>1. select FASTQ files:</p>
+                    <div class="file-upload" id="fastqSelecter">
+                        <div class="file-select">
+                            <div class="file-select-button" id="fastqFileName">select FASTQ file(s): </div>
+                            <div class="file-select-name" id="noFile">no file selected...</div>
+                            <input type="file" name="fastqUploader[]" id="fastqUploader" multiple>
+                        </div>
+                    </div>
+                    <div id="filedrag">or drop FASTQ files here...</div>
+                    <!-- INDEX -->
+                    <p>2. select an index:</p>
+                    <select class="select-css" id="indexSelecter">
+            <option value="groot-files/groot.index" selected>ARG-ANNOT (default)</option>
+            <option value="index 2" disabled>index 2</option>
+            <option value="index3" disabled>index 3</option>
           </select>
-          <p>3. check input and load (takes a few seconds):</p>
-          <br/>
-          <button id="inputChecker"><span>confirm!</span></button>
-          <br/>
+                    <p>3. check input and load (takes a few seconds):</p>
+                    <br />
+                    <button id="inputChecker"><span>confirm!</span></button>
+                    <br />
 
+                </div>
+            </div>
+
+            <!-- Parameters modal -->
+            <div id="parametersModal" class="modal">
+                <div class="modal-content">
+                    <span class="close-modal">&#215;</span>
+                    <ul>
+                        <li>
+                            <p title="parameter 1">Slider A (<output id="param1value">0</output>):</p>
+                            <input type="range" min="-1" max="1" value="0" step="0.1" id="param1" name="param1slider" oninput="param1value.value = param1.value">
+                        </li>
+                        <li>
+                            <p title="parameter 2">Slider B (<output id="param2value">0</output>):</p>
+                            <input type="range" min="-1" max="1" value="0" step="0.1" id="param2" name="param2slider" oninput="param2value.value = param2.value">
+                        </li>
+                    </ul>
+                    <button onclick="iconUpdate('paramIcon'); statusUpdate('status', 'parameters are set')"><span>set these
+              parameters!</span></button>
+                </div>
+            </div>
+
+            <!-- Results modal -->
+            <div id="resultsModal" class="modal">
+                <div class="modal-content">
+                    <span class="close-modal">&#215;</span>
+                    <h2>GROOT RESULTS:</h2>
+                    <hr />
+                    <table class="results-table">
+                        <thead>
+                            <tr>
+                                <th>Haplotype</th>
+                                <th>Abundance</th>
+                            </tr>
+                        </thead>
+                        <tbody id="resultsContent"></tbody>
+                    </table>
+                    <div id="runTime"></div>
+                </div>
+            </div>
+
+            <!-- Help modal -->
+            <div id="helpModal" class="modal">
+                <div class="modal-content">
+                    <span class="close-modal">&#215;</span>
+                    <h2>GROOT:</h2>
+                    <hr />
+
+                    <p>
+                        I AM <a>GROOT</a>!
+                    </p>
+
+                </div>
+            </div>
         </div>
-      </div>
 
-      <!-- Parameters modal -->
-      <div id="parametersModal" class="modal">
-        <div class="modal-content">
-          <span class="close-modal">&#215;</span>
-          <ul>
-            <li>
-              <p title="parameter 1">Slider A (<output id="param1value">0</output>):</p>
-              <input type="range" min="-1" max="1" value="0" step="0.1" id="param1" name="param1slider" oninput="param1value.value = param1.value">
-            </li>
-            <li>
-              <p title="parameter 2">Slider B (<output id="param2value">0</output>):</p>
-              <input type="range" min="-1" max="1" value="0" step="0.1" id="param2" name="param2slider" oninput="param2value.value = param2.value">
-            </li>
-          </ul>
-          <button onclick="setParameters()"><span>set these parameters!</span></button>
+        <!-- Footer -->
+        <div class="footer">
+            <a class="fa fa-power-off" id="close"></a>
+            <a class="fa fa-redo-alt" href="javascript:history.go(0)"></a>
+            <a class="fa fa-question-circle modal-button" href="#helpModal"></a>
         </div>
-      </div>
-      
-      <!-- Results modal -->
-      <div id="resultsModal" class="modal">
-        <div class="modal-content">
-          <span class="close-modal">&#215;</span>
-          <h2>GROOT RESULTS:</h2>
-          <hr/>
-          <table class="results-table">
-              <thead>
-                  <tr>
-                      <th>Haplotype</th>
-                      <th>Abundance</th>
-                  </tr>
-              </thead>
-              <tbody id="resultsContent"></tbody>
-          </table>
-          <div id="runTime"></div>
-        </div>
-      </div>
-
-      <!-- Help modal -->
-      <div id="helpModal" class="modal">
-        <div class="modal-content">
-          <span class="close-modal">&#215;</span>
-          <h2>GROOT:</h2>
-          <hr/>
-
-          <p>
-            I AM <a>GROOT</a>!
-          </p>
-
-        </div>
-      </div>
     </div>
 
-    <!-- Footer -->
-    <div class="footer">
-      <a class="fa fa-power-off" id="close"></a>
-      <a class="fa fa-redo-alt" href="javascript:history.go(0)"></a>
-      <a class="fa fa-question-circle modal-button" href="#helpModal"></a>
-    </div>
-  </div>
-  
-  <!--- External JS --->
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js" type="text/javascript"></script>
-  <script async="" src="https://www.googletagmanager.com/gtag/js?id=UA-90659329-2" type="text/javascript"></script>
-  
-  <!--- JS for WASM --->
-  <script src="assets/js/wasm_exec.js" type="text/javascript"></script>
-  <script src="assets/js/utils.js" type="text/javascript"></script>
-  <!---<script src="assets/js/bundle.js" type="text/javascript"></script>--->
+    <!--- External JS --->
+    <script async="" src="https://www.googletagmanager.com/gtag/js?id=UA-90659329-2" type="text/javascript"></script>
 
-  
-  <script type="text/javascript">
-    if (WebAssembly) {
-                 // WebAssembly.instantiateStreaming is not currently available in Safari
-                 if (WebAssembly && !WebAssembly.instantiateStreaming) { // polyfill
-                     WebAssembly.instantiateStreaming = async (resp, importObject) => {
-                        const source = await (await resp).arrayBuffer();
-                         return await WebAssembly.instantiate(source, importObject);
-                     };
-                 }  
-                 const go = new Go();
-                 WebAssembly.instantiateStreaming(fetch("baby-groot.wasm"), go.importObject).then((result) => {
-                    go.run(result.instance);
-                    initInputFiles();
-                    getGraphs("assets/groot-files/dummy-db/groot.gg");
-                    getLSHforest("assets/groot-files/dummy-db/groot.lshf");
-                    statusUpdate('status', 'GROOT is ready!');
-                 });
-            } else {
-               console.log("WebAssembly is not supported in this browser")
-               statusUpdate('status', 'please get a more recent browser!');
+    <!--- JS for WASM --->
+    <script src="assets/js/wasm_exec.js" type="text/javascript"></script>
+    <script src="assets/js/utils.js" type="text/javascript"></script>
+    <script src="assets/js/bundle.js" type="text/javascript"></script>
+
+    <!--- JS for modals --->
+    <script type="text/javascript">
+        var btn = document.querySelectorAll(".modal-button");
+        var modals = document.querySelectorAll('.modal');
+        var spans = document.getElementsByClassName("close-modal");
+        for (var i = 0; i < btn.length; i++) {
+            btn[i].onclick = function(e) {
+                e.preventDefault();
+                modal = document.querySelector(e.target.getAttribute("href"));
+                modal.style.display = "block";
             }
-  </script>
-
-  <!--- JS page prep --->
-  <script type="text/javascript">
-    window.ontouchmove = function() {return false;}
-    window.onorientationchange = function() {document.body.scrollTop = 0;}
-    window.onload = function() {
-      // turn the spinner off
-      document.getElementById("spinner").setAttribute('hidden', '');
-    }
-
-    // listen out for index selection -- TODO: I don't think this isn't listening to the right selecter
-    //document.getElementById("indexSelecter").addEventListener('click', function() {
-    //  var selectedIndex = document.getElementById("indexSelecter").selectedOptions;
-    //  getIndex(selectedIndex[0].value);
-    //});
-
-    // listen out for input checker
-    document.getElementById("inputChecker").addEventListener('click', function() {
-      toggleDiv("inputModal");
-      document.getElementById("spinner").removeAttribute('hidden');
-      setTimeout( 
-        function (){ 
-          inputCheck();
-        }, 10);
-    });
-  </script>
-
-
-  <!--- JS for modals --->
-  <script type="text/javascript">
-    var btn = document.querySelectorAll(".modal-button");
-    var modals = document.querySelectorAll('.modal');
-    var spans = document.getElementsByClassName("close-modal");
-    for (var i = 0; i < btn.length; i++) {
-      btn[i].onclick = function(e) {
-          e.preventDefault();
-          modal = document.querySelector(e.target.getAttribute("href"));
-          modal.style.display = "block";
-      }
-    }
-    for (var i = 0; i < spans.length; i++) {
-      spans[i].onclick = function() {
-          for (var index in modals) {
-            if (typeof modals[index].style !== 'undefined') modals[index].style.display = "none";    
-          }
-      }
-    }
-    window.onclick = function(event) {
-        if (event.target.classList.contains('modal')) {
-          for (var index in modals) {
-            if (typeof modals[index].style !== 'undefined') modals[index].style.display = "none";    
-          }
         }
-    }
-  </script>
-
-<!--- JS for FASTQ files --->
-<script>
-  $('#uploader1').bind('change', function () {
-    var filename = $("#uploader1").val();
-    if (/^\s*$/.test(filename)) {
-      $("#fastqSelecter").removeClass('active');
-      $("#noFile").text("No file chosen..."); 
-    }
-    else {
-      $("#fastqSelecter").addClass('active');
-      $("#noFile").text(filename.replace("C:\\fakepath\\", "")); 
-    }
-  });
-
-
-function initInputFiles() {
-
-  // set up the FASTQ input
-  var uploader1 = document.getElementById("uploader1"), filedrag = document.getElementById("filedrag");
-  uploader1.addEventListener("change", FileSelectHandler, false);
-  var xhr = new XMLHttpRequest();
-  if (xhr.upload) {
-
-    // file drop
-    filedrag.addEventListener("dragover", FileDragHover, false);
-    filedrag.addEventListener("dragleave", FileDragHover, false);
-    filedrag.addEventListener("drop", FileSelectHandler, false);
-    filedrag.style.display = "block";
-  }
-}
-
-function FileDragHover(e) {
-    e.stopPropagation();
-    e.preventDefault();
-    e.target.className = (e.type == "dragover" ? "hover" : "");
-}
-
-
-function FileSelectHandler(e) {
-
-    // cancel event and hover styling
-    FileDragHover(e);
-
-    // fetch FileList object
-    var files = e.target.files || e.dataTransfer.files;
-    if (files.length != 0) {
-      $("#fastqSelecter").addClass('active');
-      document.getElementById("noFile").innerHTML = "";
-    } else {
-      $("#fastqSelecter").removeClass('active');
-      document.getElementById("noFile").innerHTML = "no files :(";
-    }
-
-    // process all FASTQ files
-    var fastqList = [];
-    for (var i = 0, f; f = files[i]; i++) {
-
-      // add filename to the selector bar
-      var fileName = f.name.replace("C:\\fakepath\\", "");
-      document.getElementById("noFile").innerHTML += fileName + ",";
-
-      // add the file for GROOT
-      fastqList.push(URL.createObjectURL(f));
-      //fastqList.push(f);
-    }
-
-    // get the FASTQ streamer ready
-    getFiles(fastqList);
-}
-
-
-
-</script>
+        for (var i = 0; i < spans.length; i++) {
+            spans[i].onclick = function() {
+                for (var index in modals) {
+                    if (typeof modals[index].style !== 'undefined') modals[index].style.display = "none";
+                }
+            }
+        }
+        window.onclick = function(event) {
+            if (event.target.classList.contains('modal')) {
+                for (var index in modals) {
+                    if (typeof modals[index].style !== 'undefined') modals[index].style.display = "none";
+                }
+            }
+        }
+    </script>
 
 
 
 </body>
+
 </html>
