adding processing updates, making progress display better, updating makefile

--- a/wasm/index.html
+++ b/wasm/index.html
@@ -30,7 +30,7 @@
 
             <!-- Status bar -->
             <div id="status">
-                <p>starting GROOT...</p>
+                <p>> starting GROOT...</p>
             </div>
             <div id="progress-container">
                 <div id="progress-bar"></div>
@@ -50,8 +50,6 @@
                     </li>
                 </ul>
             </div>
-
-
 
             <!-- Input modal -->
             <div id="inputModal" class="modal">
@@ -99,7 +97,7 @@
                             <input type="range" min="-1" max="1" value="0" step="0.1" id="param2" name="param2slider" oninput="param2value.value = param2.value">
                         </li>
                     </ul>
-                    <button onclick="iconUpdate('paramIcon'); statusUpdate('status', 'parameters are set')"><span>set these
+                    <button onclick="iconUpdate('paramIcon'); statusUpdate('status', '> parameters are set')"><span>set these
               parameters!</span></button>
                 </div>
             </div>
